--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,8 +1,7 @@
 .skills-container li:before {
-    content: "\f00c";
+    content: "\f0da";
     font-family: FontAwesome;
     display: inline-block;
-    margin-left: -1.3em;
-    margin-right: 0.3em;
-    width: 1.3em;
+    width: 1rem;
+    color: #358CC6;
 }
