--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -3,3 +3,10 @@
     /* align-items: center; */
     /* justify-content: center; */
 }
+
+@media only screen and (max-width: 600px) {
+    .rev-col {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
