--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,18 +1,99 @@
-.navbar {
+@font-face {
+  font-family: alice-regular;
+  src: url(../../fonts/Alice-Regular.ttf);
+}
+
+/* .navbar {
   background-color: black;
   width: 100%;
   height: 8vh;
-}
-
-.navbar a {
-  font-size: 1.5rem;
+  box-shadow: 0 16px 16px -5px rgba(0, 0, 0, .3);
 }
 
 .nav-item>.active {
-  border-bottom: 3px solid #565387;
+  border-bottom: 3px solid #1C7DBD;
 }
 
 .nav-item {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: inline;
+}
+
+.logo {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav-item {
+    padding-left: 7.5px;
+    padding-right: 7.5px;
+    font-size: 1.20rem !important;
+  }
+  .logo {
+    padding-left: 2px;
+    padding-right: 2px;
+  }
+} */
+
+/* //////////////////////////////////////////////////// */
+
+.nav {
+  background-color: black;
+  width: 100%;
+  height: 8.35vh;
+  box-shadow: 0 16px 16px -5px rgba(0, 0, 0, .3);
+}
+
+.nav ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  margin: 0 auto;
+  height: 8vh;
+  width: 100%;
+}
+
+.nav li {
+  font-size: 1.2em;
+  height: 50px;
+  line-height: 50px;
+  display: inline-block;
+}
+
+.nav a {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  transition: .3s background-color;
+  cursor: pointer;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.logo {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.nav a:hover {
+  border-bottom: 3px solid #1C7DBD;
+  color: #fff;
+}
+
+.nav>.active {
+  border-bottom: 3px solid #1C7DBD;
+}
+
+@media only screen and (max-width: 600px) {
+  .nav a {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 1.20rem !important;
+  }
+  .logo {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
