--- a/src/utility/Tabs.css
+++ b/src/utility/Tabs.css
@@ -1,5 +1,5 @@
 .tabs {
-    font-family: arial;
+    font-family: inherit;
     margin: 0 auto;
     width: 70%;
     text-align: center;
@@ -20,11 +20,10 @@ button:focus {
 
 button {
     margin-right: 15px;
-    font-size: 20px;
     background: transparent;
     border: none;
     outline: none;
-    padding: 10px 20px;
+    padding: 10px 15px;
     cursor: pointer;
     color: rgba(0, 0, 0, .4);
     transition: all ease-in-out .2s;
