--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,7 +8,7 @@
 .nav {
   background-color: black;
   width: 100%;
-  height: 8.35vh;
+  height: 65px;
   box-shadow: 0 16px 16px -5px rgba(0, 0, 0, .3);
 }
 
@@ -17,14 +17,14 @@
   text-align: center;
   padding: 0;
   margin: 0 auto;
-  height: 8vh;
+  height: 65px;
   width: 100%;
 }
 
 .nav li {
   font-size: 1.2em;
-  height: 50px;
-  line-height: 50px;
+  height: 60px;
+  line-height: 60px;
   display: inline-block;
 }
 
@@ -45,6 +45,7 @@
 
 .nav a:hover {
   color: #fff;
+  background-color: red;
 }
 
 .nav>.active {
