--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -26,6 +26,7 @@
   height: 60px;
   line-height: 60px;
   display: inline-block;
+  width: 7%;
 }
 
 .nav a {
@@ -41,11 +42,12 @@
 .logo {
   padding-left: 20px;
   padding-right: 20px;
+  width: 7%;
+  text-align: center;
 }
 
 .nav a:hover {
   color: #fff;
-  border-bottom: 3px solid #1C7DBD;
 }
 
 .nav>.active {
@@ -57,11 +59,15 @@
     padding-left: 7px;
     padding-right: 7px;
   }
+  .nav li {
+    width: 19%;
+  }
   .logo {
     padding-left: 5px;
     padding-right: 5px;
+    width: 17%;
   }
   .nav a:hover {
-    color: #fff;
+    color: inherit;
   }
 }
