--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,8 +1,8 @@
-.home-container {
-    height: 92vh;
+.resume-link {
+    color: inherit;
 }
 
-.home-description {
-    margin-top: 3rem;
-    width: 50%;
+.resume-link:hover {
+    text-decoration: none;
+    font-weight: bold;
 }
